changed getAllParents to use ParseTree